--- a/cora-e-theo/src/index.css
+++ b/cora-e-theo/src/index.css
@@ -22,3 +22,22 @@ audio, img, iframe, video{
   height: auto;
   width: 100%;
 }
+
+/*Scroll*/
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #222;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ffa500;
+  border-radius: 10px;
+  border: 1px solid #ff8c00;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ff8c00;
+}
